reports controller changes